# P2-Chess-NTUST-OOP-Lab

./: .gitignore
Group15_P2/: README.md
Group15_P2/Console_ver/: CMakeLists.txt  Chess.cpp  ChessLog.cpp  ChessLog.h  GameBoard.cpp  GameBoard.h  Move.cpp  Move.h  Piece.cpp  Piece.h  Position.cpp  Position.h
